--- a/c_build_scan/c_build_search.vcxproj
+++ b/c_build_scan/c_build_search.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="c_build_search.c" />
     <ClCompile Include="Set.c" />
     <ClCompile Include="SetBuilder.c" />
+    <ClCompile Include="SetSearch.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +181,7 @@
     <ClInclude Include="SetItemDir.h" />
     <ClInclude Include="SetItemFile.h" />
     <ClInclude Include="SetItemImage.h" />
+    <ClInclude Include="SetSearch.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
