--- a/c_build_scan/c_build_search.vcxproj
+++ b/c_build_scan/c_build_search.vcxproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <ClCompile Include="c_build_search.c" />
     <ClCompile Include="ImgUtils.c" />
+    <ClCompile Include="Logger.c" />
     <ClCompile Include="Set.c" />
     <ClCompile Include="SetBuilder.c" />
     <ClCompile Include="SetSearch.c" />
@@ -178,6 +179,7 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="ImgUtils.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Set.h" />
     <ClInclude Include="SetBuilder.h" />
     <ClInclude Include="SetItemDir.h" />
