Working linux & windows version

--- a/c_build_scan/Makefile
+++ b/c_build_scan/Makefile
@@ -4,8 +4,8 @@ CFLAGS=
 %.o: %.c
 	$(CC) -c -o $@ $< $(CFLAGS)
  
-c_build_search: c_build_search.o utils.o Set.o SetBuilder.o SetSearch.o
-	$(CC) -o c_build_search utils.o c_build_search.o SetBuilder.o SetSearch.o Set.o -lfreeimage
+c_build_search: c_build_search.o utils.o Set.o SetBuilder.o SetSearch.o Logger.o ImgUtils.o
+	$(CC) -o c_build_search utils.o c_build_search.o SetBuilder.o SetSearch.o Set.o Logger.o ImgUtils.o -lfreeimage
 
 clean:
 	rm *.o c_build_search
