--- a/c_build_scan/c_build_search.vcxproj
+++ b/c_build_scan/c_build_search.vcxproj
@@ -169,6 +169,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="c_build_search.c" />
+    <ClCompile Include="hashmap.c" />
     <ClCompile Include="ImgUtils.c" />
     <ClCompile Include="Logger.c" />
     <ClCompile Include="Set.c" />
@@ -178,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="hashmap.h" />
     <ClInclude Include="ImgUtils.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Set.h" />
