--- a/c_build_scan/c_build_search.vcxproj
+++ b/c_build_scan/c_build_search.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Set.c" />
     <ClCompile Include="SetBuilder.c" />
     <ClCompile Include="SetSearch.c" />
+    <ClCompile Include="Timer.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +186,7 @@
     <ClInclude Include="Set.h" />
     <ClInclude Include="SetBuilder.h" />
     <ClInclude Include="SetSearch.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
