--- a/cs_build_scan/cs_build_scan.csproj
+++ b/cs_build_scan/cs_build_scan.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builder.cs" />
+    <Compile Include="Closeness.cs" />
     <Compile Include="Crc32.cs" />
     <Compile Include="ImgFileInfo.cs" />
     <Compile Include="Log.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Set.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
