--- a/cpp_build_scan/cimage/cimage/cimage.vcxproj
+++ b/cpp_build_scan/cimage/cimage/cimage.vcxproj
@@ -182,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="crc32.h" />
     <ClInclude Include="ImgCollection.h" />
+    <ClInclude Include="ImgCollectionSearch.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="RunThreadInfo.h" />
     <ClInclude Include="ImgCollectionBuilder.h" />
@@ -202,6 +203,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">cimage.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">cimage.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="ImgCollectionSearch.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">cimage.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">cimage.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="logger.cpp">
