--- a/cpp_build_scan/cimage/cimage/Makefile
+++ b/cpp_build_scan/cimage/cimage/Makefile
@@ -4,8 +4,8 @@ CFLAGS= -O3
 %.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
  
-cimage: cimage.o ImgCollectionBuilder.o ImgUtils.o logger.o Timer.o
-	$(CC) -o cimage cimage.o ImgCollectionBuilder.o ImgUtils.o logger.o Timer.o -lfreeimageplus -lpthread
+cimage: cimage.o ImgCollectionBuilder.o ImgUtils.o logger.o Timer.o ImgCollectionSearch.o
+	$(CC) -o cimage cimage.o ImgCollectionBuilder.o ImgUtils.o logger.o ImgCollectionSearch.o Timer.o -lfreeimageplus -lpthread
 
 clean:
 	rm *.o cimage
