--- a/c_build_scan/c_build_search.vcxproj
+++ b/c_build_scan/c_build_search.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="Set.h" />
     <ClInclude Include="SetBuilder.h" />
     <ClInclude Include="SetSearch.h" />
+    <ClInclude Include="SrchThreadInfo.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
