--- a/c_build_scan/c_build_search.vcxproj.filters
+++ b/c_build_scan/c_build_search.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SrchThreadInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
