added cpp_library version with mysql support

--- a/java_build_scan/jimage/nbproject/project.properties
+++ b/java_build_scan/jimage/nbproject/project.properties
@@ -37,12 +37,18 @@ file.reference.common-image-3.2.1.jar=..\\thirdparty\\common-image-3.2.1.jar
 file.reference.common-io-3.2.1.jar=..\\thirdparty\\common-io-3.2.1.jar
 file.reference.common-lang-3.2.1.jar=..\\thirdparty\\common-lang-3.2.1.jar
 file.reference.commons-lang3-3.4.jar=..\\thirdparty\\commons-lang3-3.4.jar
+file.reference.commons-logging-1.1.1.jar=..\\thirdparty\\other\\commons-logging-1.1.1.jar
 file.reference.imageio-core-3.2.1.jar=..\\thirdparty\\imageio-core-3.2.1.jar
 file.reference.imageio-jpeg-3.2.1.jar=..\\thirdparty\\imageio-jpeg-3.2.1.jar
 file.reference.imageio-metadata-3.2.1.jar=..\\thirdparty\\imageio-metadata-3.2.1.jar
 file.reference.imageio-tiff-3.2.1.jar=..\\thirdparty\\imageio-tiff-3.2.1.jar
 file.reference.imgscalr-lib-4.2.jar=..\\thirdparty\\imgscalr-lib-4.2.jar
 file.reference.log4j-1.2.17.jar=..\\thirdparty\\log4j-1.2.17.jar
+file.reference.spring-aop-5.2.1.RELEASE.jar=..\\thirdparty\\spring\\spring-aop-5.2.1.RELEASE.jar
+file.reference.spring-beans-5.2.1.RELEASE.jar=..\\thirdparty\\spring\\spring-beans-5.2.1.RELEASE.jar
+file.reference.spring-context-5.2.1.RELEASE.jar=..\\thirdparty\\spring\\spring-context-5.2.1.RELEASE.jar
+file.reference.spring-core-5.2.1.RELEASE.jar=..\\thirdparty\\spring\\spring-core-5.2.1.RELEASE.jar
+file.reference.spring-expression-5.2.1.RELEASE.jar=..\\thirdparty\\spring\\spring-expression-5.2.1.RELEASE.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +64,13 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${reference.jutils.jar}:\
     ${reference.jimageutils.jar}:\
-    ${libs.JavaFX12.classpath}
+    ${libs.JavaFX12.classpath}:\
+    ${file.reference.spring-aop-5.2.1.RELEASE.jar}:\
+    ${file.reference.spring-beans-5.2.1.RELEASE.jar}:\
+    ${file.reference.spring-context-5.2.1.RELEASE.jar}:\
+    ${file.reference.spring-core-5.2.1.RELEASE.jar}:\
+    ${file.reference.spring-expression-5.2.1.RELEASE.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
