--- a/java_build_scan/jimageutils/nbproject/project.properties
+++ b/java_build_scan/jimageutils/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.imageio-metadata-3.2.1.jar=../thirdparty/imageio-metadata-3.2.1.j
 file.reference.imageio-tiff-3.2.1.jar=../thirdparty/imageio-tiff-3.2.1.jar
 file.reference.imgscalr-lib-4.2.jar=../thirdparty/imgscalr-lib-4.2.jar
 file.reference.log4j-1.2.17.jar=../thirdparty/log4j-1.2.17.jar
+file.reference.mariadb-java-client-2.4.4.jar=..\\thirdparty\\mariadb-java-client-2.4.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.imgscalr-lib-4.2.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${reference.jutils.jar}:\
-    ${libs.JavaFX12.classpath}
+    ${libs.JavaFX12.classpath}:\
+    ${file.reference.mariadb-java-client-2.4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
