--- a/cpp_library/cpp_library_dll/cpp_library_dll.vcxproj
+++ b/cpp_library/cpp_library_dll/cpp_library_dll.vcxproj
@@ -91,7 +91,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;CPPBUILDSCANDLL_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Sources\githib_svn\imgcollection\trunk\cpp_library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Sources\github_svn\imgcollection\trunk\cpp_library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -99,7 +99,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalDependencies>libmariadb.lib;FreeImagePlusd.lib;FreeImageLibd.lib;cpp_library.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%IMGTHIRDPARTY%\freeimage\x32d;C:\Program Files (x86)\MariaDB\MariaDB Connector C\lib;C:\Sources\githib_svn\imgcollection\trunk\cpp_library\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%IMGTHIRDPARTY%\freeimage\x32d;C:\Program Files (x86)\MariaDB\MariaDB Connector C\lib;C:\Sources\github_svn\imgcollection\trunk\cpp_library\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,7 +129,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;CPPBUILDSCANDLL_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Sources\githib_svn\imgcollection\trunk\cpp_library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Sources\github_svn\imgcollection\trunk\cpp_library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
