--- a/pplot/pplot.csproj
+++ b/pplot/pplot.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Device" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Speech" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -82,7 +83,14 @@
     <Compile Include="ApWinApproachDisplay.cs" />
     <Compile Include="ApWinPlane.cs" />
     <Compile Include="GEO.cs" />
+    <Compile Include="MessagesControl.xaml.cs">
+      <DependentUpon>MessagesControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="OpenSky.cs" />
     <Compile Include="Plane.cs" />
+    <Compile Include="RunwayControl.xaml.cs">
+      <DependentUpon>RunwayControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SBSMessage.cs" />
     <Compile Include="SimTrack.cs" />
     <Page Include="ApWin.xaml">
@@ -99,6 +107,14 @@
       <DependentUpon>ApWin.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MessagesControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RunwayControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
