--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /cpp_build_scan/.vs/cimage/v16
 /cpp_build_scan/UpgradeLog.htm
 obj
+/Scanner/bin
+/cs_build_scan/bin/Debug
+/cs_viewer/cs_viewer/bin/Debug
