--- a/WpfCoreTester/WpfCoreTester.csproj
+++ b/WpfCoreTester/WpfCoreTester.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.11" />
+  </ItemGroup>
+
 </Project>
