--- a/WpfCoreTester/WpfCoreTester.csproj
+++ b/WpfCoreTester/WpfCoreTester.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="NLog" Version="4.7.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
