multiple dirs in rescan

--- a/cpp_build_scan/cimage/cimage/cimage.vcxproj
+++ b/cpp_build_scan/cimage/cimage/cimage.vcxproj
@@ -262,6 +262,9 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">WIN32;FREEIMAGE_LIBNDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\commandlines.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
