--- a/java2/jfxview/nbproject/project.properties
+++ b/java2/jfxview/nbproject/project.properties
@@ -35,28 +35,28 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/jfxview
 endorsed.classpath=
 excludes=
-file.reference.common-image-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\common-image-3.2.1.jar
-file.reference.common-io-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\common-io-3.2.1.jar
-file.reference.common-lang-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\common-lang-3.2.1.jar
-file.reference.commons-lang3-3.4.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\commons-lang3-3.4.jar
-file.reference.imageio-batik-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-batik-3.2.1.jar
-file.reference.imageio-bmp-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-bmp-3.2.1.jar
-file.reference.imageio-clippath-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-clippath-3.2.1.jar
-file.reference.imageio-core-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-core-3.2.1.jar
-file.reference.imageio-hdr-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-hdr-3.2.1.jar
-file.reference.imageio-icns-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-icns-3.2.1.jar
-file.reference.imageio-iff-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-iff-3.2.1.jar
-file.reference.imageio-jpeg-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-jpeg-3.2.1.jar
-file.reference.imageio-metadata-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-metadata-3.2.1.jar
-file.reference.imageio-pcx-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-pcx-3.2.1.jar
-file.reference.imageio-pict-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-pict-3.2.1.jar
-file.reference.imageio-pnm-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-pnm-3.2.1.jar
-file.reference.imageio-psd-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-psd-3.2.1.jar
-file.reference.imageio-sgi-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-sgi-3.2.1.jar
-file.reference.imageio-tga-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-tga-3.2.1.jar
-file.reference.imageio-thumbsdb-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-thumbsdb-3.2.1.jar
-file.reference.imageio-tiff-3.2.1.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imageio-tiff-3.2.1.jar
-file.reference.imgscalr-lib-4.2.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\imgscalr-lib-4.2.jar
+file.reference.common-image-3.2.1.jar-1=..\\thirdparty\\common-image-3.2.1.jar
+file.reference.common-io-3.2.1.jar-1=..\\thirdparty\\common-io-3.2.1.jar
+file.reference.common-lang-3.2.1.jar-1=..\\thirdparty\\common-lang-3.2.1.jar
+file.reference.commons-lang3-3.4.jar-1=..\\thirdparty\\commons-lang3-3.4.jar
+file.reference.imageio-batik-3.2.1.jar-1=..\\thirdparty\\imageio-batik-3.2.1.jar
+file.reference.imageio-bmp-3.2.1.jar-1=..\\thirdparty\\imageio-bmp-3.2.1.jar
+file.reference.imageio-clippath-3.2.1.jar-1=..\\thirdparty\\imageio-clippath-3.2.1.jar
+file.reference.imageio-core-3.2.1.jar-1=..\\thirdparty\\imageio-core-3.2.1.jar
+file.reference.imageio-hdr-3.2.1.jar-1=..\\thirdparty\\imageio-hdr-3.2.1.jar
+file.reference.imageio-icns-3.2.1.jar-1=..\\thirdparty\\imageio-icns-3.2.1.jar
+file.reference.imageio-iff-3.2.1.jar-1=..\\thirdparty\\imageio-iff-3.2.1.jar
+file.reference.imageio-jpeg-3.2.1.jar-1=..\\thirdparty\\imageio-jpeg-3.2.1.jar
+file.reference.imageio-metadata-3.2.1.jar-1=..\\thirdparty\\imageio-metadata-3.2.1.jar
+file.reference.imageio-pcx-3.2.1.jar-1=..\\thirdparty\\imageio-pcx-3.2.1.jar
+file.reference.imageio-pict-3.2.1.jar-1=..\\thirdparty\\imageio-pict-3.2.1.jar
+file.reference.imageio-pnm-3.2.1.jar-1=..\\thirdparty\\imageio-pnm-3.2.1.jar
+file.reference.imageio-psd-3.2.1.jar-1=..\\thirdparty\\imageio-psd-3.2.1.jar
+file.reference.imageio-sgi-3.2.1.jar-1=..\\thirdparty\\imageio-sgi-3.2.1.jar
+file.reference.imageio-tga-3.2.1.jar-1=..\\thirdparty\\imageio-tga-3.2.1.jar
+file.reference.imageio-thumbsdb-3.2.1.jar-1=..\\thirdparty\\imageio-thumbsdb-3.2.1.jar
+file.reference.imageio-tiff-3.2.1.jar-1=..\\thirdparty\\imageio-tiff-3.2.1.jar
+file.reference.imgscalr-lib-4.2.jar-1=..\\thirdparty\\imgscalr-lib-4.2.jar
 file.reference.javafx-swt.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx-swt.jar
 file.reference.javafx.base.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx.base.jar
 file.reference.javafx.controls.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx.controls.jar
@@ -65,8 +65,10 @@ file.reference.javafx.graphics.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javaf
 file.reference.javafx.media.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx.media.jar
 file.reference.javafx.swing.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=..\\thirdparty\\javafx-sdk-12.0.2\\lib\\javafx.web.jar
-file.reference.log4j-1.2.17.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\log4j-1.2.17.jar
-file.reference.svg-image-reader-1.0.jar=C:\\Sources\\russinozfromhp\\trunk\\thirdparty\\svg-image-reader-1.0.jar
+file.reference.log4j-1.2.17.jar-1=..\\thirdparty\\log4j-1.2.17.jar
+file.reference.org.apache.batik.transcoder-1.6.0-20081006.jar=..\\thirdparty\\org.apache.batik.transcoder-1.6.0-20081006.jar
+file.reference.scrimage-core-4.0.6.jar=..\\thirdparty\\scrimage-core-4.0.6.jar
+file.reference.scrimage-io_2.11-2.1.0.M2.jar=..\\thirdparty\\scrimage-io_2.11-2.1.0.M2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -78,30 +80,32 @@ javac.classpath=\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
-    ${file.reference.common-image-3.2.1.jar}:\
-    ${file.reference.common-io-3.2.1.jar}:\
-    ${file.reference.common-lang-3.2.1.jar}:\
-    ${file.reference.commons-lang3-3.4.jar}:\
-    ${file.reference.imageio-batik-3.2.1.jar}:\
-    ${file.reference.imageio-bmp-3.2.1.jar}:\
-    ${file.reference.imageio-clippath-3.2.1.jar}:\
-    ${file.reference.imageio-core-3.2.1.jar}:\
-    ${file.reference.imageio-hdr-3.2.1.jar}:\
-    ${file.reference.imageio-icns-3.2.1.jar}:\
-    ${file.reference.imageio-iff-3.2.1.jar}:\
-    ${file.reference.imageio-jpeg-3.2.1.jar}:\
-    ${file.reference.imageio-metadata-3.2.1.jar}:\
-    ${file.reference.imageio-pcx-3.2.1.jar}:\
-    ${file.reference.imageio-pict-3.2.1.jar}:\
-    ${file.reference.imageio-pnm-3.2.1.jar}:\
-    ${file.reference.imageio-psd-3.2.1.jar}:\
-    ${file.reference.imageio-sgi-3.2.1.jar}:\
-    ${file.reference.imageio-tga-3.2.1.jar}:\
-    ${file.reference.imageio-thumbsdb-3.2.1.jar}:\
-    ${file.reference.imageio-tiff-3.2.1.jar}:\
-    ${file.reference.imgscalr-lib-4.2.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.svg-image-reader-1.0.jar}
+    ${file.reference.common-image-3.2.1.jar-1}:\
+    ${file.reference.common-io-3.2.1.jar-1}:\
+    ${file.reference.common-lang-3.2.1.jar-1}:\
+    ${file.reference.commons-lang3-3.4.jar-1}:\
+    ${file.reference.imageio-batik-3.2.1.jar-1}:\
+    ${file.reference.imageio-bmp-3.2.1.jar-1}:\
+    ${file.reference.imageio-clippath-3.2.1.jar-1}:\
+    ${file.reference.imageio-core-3.2.1.jar-1}:\
+    ${file.reference.imageio-hdr-3.2.1.jar-1}:\
+    ${file.reference.imageio-icns-3.2.1.jar-1}:\
+    ${file.reference.imageio-iff-3.2.1.jar-1}:\
+    ${file.reference.imageio-jpeg-3.2.1.jar-1}:\
+    ${file.reference.imageio-metadata-3.2.1.jar-1}:\
+    ${file.reference.imageio-pcx-3.2.1.jar-1}:\
+    ${file.reference.imageio-pict-3.2.1.jar-1}:\
+    ${file.reference.imageio-pnm-3.2.1.jar-1}:\
+    ${file.reference.imageio-psd-3.2.1.jar-1}:\
+    ${file.reference.imageio-sgi-3.2.1.jar-1}:\
+    ${file.reference.imageio-tga-3.2.1.jar-1}:\
+    ${file.reference.imageio-thumbsdb-3.2.1.jar-1}:\
+    ${file.reference.imageio-tiff-3.2.1.jar-1}:\
+    ${file.reference.imgscalr-lib-4.2.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.org.apache.batik.transcoder-1.6.0-20081006.jar}:\
+    ${file.reference.scrimage-core-4.0.6.jar}:\
+    ${file.reference.scrimage-io_2.11-2.1.0.M2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
