--- a/jfind/nbproject/project.properties
+++ b/jfind/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/jfind
 endorsed.classpath=
 excludes=
+file.reference.commons-lang3-3.12.0.jar=lib\\commons-lang3-3.12.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang3-3.12.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
