--- a/jfind/nbproject/project.properties
+++ b/jfind/nbproject/project.properties
@@ -37,7 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.12.0.jar=lib\\commons-lang3-3.12.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.commons-lang3-3.12.0.jar}
 # Space-separated list of extra javac options
