--- a/java2/jfxview/nbproject/private/private.properties
+++ b/java2/jfxview/nbproject/private/private.properties
@@ -5,5 +5,5 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\russe\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=C:\\Users\\russ\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
 work.dir=C:\\Sources\\github\\russinoz\\jfxview
