--- a/java2/jcommon/nbproject/project.properties
+++ b/java2/jcommon/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=jfind
-application.vendor=russ
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,28 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/jfind.jar
+dist.jar=${dist.dir}/jcommon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/jfind
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/jcommon
 excludes=
-file.reference.commons-lang3-3.12.0.jar=lib\\commons-lang3-3.12.0.jar
-file.reference.gson-2.8.9.jar=lib\\gson-2.8.9.jar
-file.reference.kotlin-stdlib-1.4.20.jar=lib\\kotlin-stdlib-1.4.20.jar
-file.reference.kotlin-stdlib-common-1.4.20.jar=lib\\kotlin-stdlib-common-1.4.20.jar
-file.reference.okhttp-4.9.3.jar=lib\\okhttp-4.9.3.jar
-file.reference.okio-2.10.0.jar=lib\\okio-2.10.0.jar
 includes=**
-jar.compress=true
-javac.classpath=\
-    ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.kotlin-stdlib-1.4.20.jar}:\
-    ${file.reference.kotlin-stdlib-common-1.4.20.jar}:\
-    ${file.reference.okhttp-4.9.3.jar}:\
-    ${file.reference.okio-2.10.0.jar}:\
-    ${file.reference.gson-2.8.9.jar}:\
-    ${reference.jcommon.jar}
+jar.compress=false
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=16
-javac.target=16
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -85,14 +70,10 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=jfind
-main.class=jfind.jfindFrame
-manifest.file=manifest.mf
+jlink.launcher.name=jcommon
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.jcommon=../java2/jcommon
-reference.jcommon.jar=${project.jcommon}/dist/jcommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
