--- a/java2/jserver/nbproject/project.properties
+++ b/java2/jserver/nbproject/project.properties
@@ -119,7 +119,8 @@ javac.classpath=\
     ${file.reference.jetty-util-ajax-10.0.7.jar}:\
     ${file.reference.jetty-webapp-10.0.7.jar}:\
     ${file.reference.jetty-xml-10.0.7.jar}:\
-    ${file.reference.commons-lang3-3.12.0.jar}
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${reference.jcommon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -160,6 +161,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.jcommon=../jcommon
+reference.jcommon.jar=${project.jcommon}/dist/jcommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
