--- a/java2/jserver/nbproject/project.properties
+++ b/java2/jserver/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/jserver
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.15.jar=..\\..\\jfind\\lib\\commons-codec-1.15.jar
 file.reference.commons-lang3-3.12.0.jar=libs\\commons-lang3-3.12.0.jar
 file.reference.gson-2.8.9.jar=libs\\gson-2.8.9.jar
 file.reference.javax.servlet-api-4.0.1.jar=libs\\javax.servlet-api-4.0.1.jar
@@ -120,7 +121,8 @@ javac.classpath=\
     ${file.reference.jetty-webapp-10.0.7.jar}:\
     ${file.reference.jetty-xml-10.0.7.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${reference.jcommon.jar}
+    ${reference.jcommon.jar}:\
+    ${file.reference.commons-codec-1.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
