--- a/jfind/nbproject/project.properties
+++ b/jfind/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/jfind
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.15.jar=lib\\commons-codec-1.15.jar
 file.reference.commons-lang3-3.12.0.jar=lib\\commons-lang3-3.12.0.jar
 file.reference.gson-2.8.9.jar=lib\\gson-2.8.9.jar
 file.reference.kotlin-stdlib-1.4.20.jar=lib\\kotlin-stdlib-1.4.20.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.okhttp-4.9.3.jar}:\
     ${file.reference.okio-2.10.0.jar}:\
     ${file.reference.gson-2.8.9.jar}:\
-    ${reference.jcommon.jar}
+    ${reference.jcommon.jar}:\
+    ${file.reference.commons-codec-1.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
