--- a/java2/jfind/nbproject/project.properties
+++ b/java2/jfind/nbproject/project.properties
@@ -51,8 +51,8 @@ javac.classpath=\
     ${file.reference.okhttp-4.9.3.jar}:\
     ${file.reference.okio-2.10.0.jar}:\
     ${file.reference.gson-2.8.9.jar}:\
-    ${reference.jcommon.jar}:\
-    ${file.reference.commons-codec-1.15.jar}
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${reference.jcommon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -93,7 +93,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.jcommon=../java2/jcommon
+project.jcommon=../jcommon
 reference.jcommon.jar=${project.jcommon}/dist/jcommon.jar
 run.classpath=\
     ${javac.classpath}:\
